Refactor order-related classes: add JsonCreator for deserialization