@@ -20,6 +20,7 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Component
 public class OrderDataMapper {
@@ -28,18 +29,26 @@ public class OrderDataMapper {
         return Restaurant.builder()
                 .restaurantId(new RestaurantId(createOrderCommand.getRestaurantId()))
                 .products(createOrderCommand.getItems().stream().map(orderItem ->
-                        new Product(new ProductId(orderItem.getProductId()))).toList())
+                                new Product(new ProductId(orderItem.getProductId())))
+                        .collect(Collectors.toList()))
                 .build();
     }
 
-    public Order createOrderCommandToOrder
-            (CreateOrderCommand createOrderCommand) {
+    public Order createOrderCommandToOrder(CreateOrderCommand createOrderCommand) {
         return Order.builder()
                 .customerId(new CustomerId(createOrderCommand.getCustomerId()))
                 .restaurantId(new RestaurantId(createOrderCommand.getRestaurantId()))
-                .deliveryAddress(orderAddessToStreedAddess(createOrderCommand.getAddress()))
+                .deliveryAddress(orderAddressToStreetAddress(createOrderCommand.getAddress()))
                 .price(new Money(createOrderCommand.getPrice()))
-                .items(orderItemsToOrderItemsEntities(createOrderCommand.getItems()))
+                .items(orderItemsToOrderItemEntities(createOrderCommand.getItems()))
+                .build();
+    }
+
+    public CreateOrderResponse orderToCreateOrderResponse(Order order, String message) {
+        return CreateOrderResponse.builder()
+                .orderTrackingId(order.getTrackingId().getValue())
+                .orderStatus(order.getOrderStatus())
+                .message(message)
                 .build();
     }
 
@@ -51,21 +60,7 @@ public class OrderDataMapper {
                 .build();
     }
 
-    private List<OrderItem> orderItemsToOrderItemsEntities
-            (List<com.food.ordering.system.order.service.domain.dto.create.OrderItem> orderItems) {
-        return orderItems.stream()
-                .map(orderItem ->
-                        OrderItem.builder()
-                                .product(new Product(new ProductId(orderItem.getProductId())))
-                                .price(new Money(orderItem.getPrice()))
-                                .quantity(orderItem.getQuantity())
-                                .subTotal(new Money(orderItem.getSubTotal()))
-                                .build())
-                .toList();
-    }
-
-    public OrderPaymentEventPayload orderCreatedEventToOrderPaymentEventPayload
-            (OrderCreatedEvent orderCreatedEvent) {
+    public OrderPaymentEventPayload orderCreatedEventToOrderPaymentEventPayload(OrderCreatedEvent orderCreatedEvent) {
         return OrderPaymentEventPayload.builder()
                 .customerId(orderCreatedEvent.getOrder().getCustomerId().getValue().toString())
                 .orderId(orderCreatedEvent.getOrder().getId().getValue().toString())
@@ -75,8 +70,8 @@ public class OrderDataMapper {
                 .build();
     }
 
-    public OrderPaymentEventPayload orderCancelledEventToOrderPaymentEventPayload
-            (OrderCancelledEvent orderCancelledEvent){
+    public OrderPaymentEventPayload orderCancelledEventToOrderPaymentEventPayload(OrderCancelledEvent
+                                                                                          orderCancelledEvent) {
         return OrderPaymentEventPayload.builder()
                 .customerId(orderCancelledEvent.getOrder().getCustomerId().getValue().toString())
                 .orderId(orderCancelledEvent.getOrder().getId().getValue().toString())
@@ -86,34 +81,34 @@ public class OrderDataMapper {
                 .build();
     }
 
-    public OrderApprovalEventPayload orderPaidEventToOrderApprovalEventPayload
-            (OrderPaidEvent orderPaidEvent) {
+    public OrderApprovalEventPayload orderPaidEventToOrderApprovalEventPayload(OrderPaidEvent orderPaidEvent) {
         return OrderApprovalEventPayload.builder()
                 .orderId(orderPaidEvent.getOrder().getId().getValue().toString())
                 .restaurantId(orderPaidEvent.getOrder().getRestaurantId().getValue().toString())
                 .restaurantOrderStatus(RestaurantOrderStatus.PAID.name())
-                .products(orderPaidEvent.getOrder().getItems().stream()
-                        .map(orderItem ->
-                            OrderApprovalEventProduct.builder()
-                                    .id(orderItem.getProduct().getId().getValue().toString())
-                                    .quantity(orderItem.getQuantity())
-                                    .build()).toList())
+                .products(orderPaidEvent.getOrder().getItems().stream().map(orderItem ->
+                        OrderApprovalEventProduct.builder()
+                                .id(orderItem.getProduct().getId().getValue().toString())
+                                .quantity(orderItem.getQuantity())
+                                .build()).collect(Collectors.toList()))
                 .price(orderPaidEvent.getOrder().getPrice().getAmount())
                 .createdAt(orderPaidEvent.getCreatedAt())
                 .build();
     }
 
-    public CreateOrderResponse orderToCreateOrderResponse
-            (Order order, String message) {
-        return CreateOrderResponse.builder()
-                .orderTrackingId(order.getTrackingId().getValue())
-                .orderStatus(order.getOrderStatus())
-                .message(message)
-                .build();
+    private List<OrderItem> orderItemsToOrderItemEntities(
+            List<com.food.ordering.system.order.service.domain.dto.create.OrderItem> orderItems) {
+        return orderItems.stream()
+                .map(orderItem ->
+                        OrderItem.builder()
+                                .product(new Product(new ProductId(orderItem.getProductId())))
+                                .price(new Money(orderItem.getPrice()))
+                                .quantity(orderItem.getQuantity())
+                                .subTotal(new Money(orderItem.getSubTotal()))
+                                .build()).collect(Collectors.toList());
     }
 
-    private StreetAddess orderAddessToStreedAddess
-            (OrderAddress orderAddress) {
+    private StreetAddess orderAddressToStreetAddress(OrderAddress orderAddress) {
         return new StreetAddess(
                 UUID.randomUUID(),
                 orderAddress.getStreet(),
